--- a/keeb1/package.json
+++ b/keeb1/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ergogen . -o test -d",
     "gen": "ergogen config.yaml -o output"
   },
   "author": "",
