fix: allow for any config

--- a/neolexis/package.json
+++ b/neolexis/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "ergogen . -o test -d",
-    "gen": "ergogen config.yaml -o output"
+    "gen": "ergogen config.yaml -o output",
+    "genX": "ergogen $4 -o output"
   },
   "author": "",
   "license": "ISC",
